src/objects/Relationship_Auto_Create__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Automatically generates a Relationship between a Contact and another Contact or a Contact and a Contact/Campaign Member based on a custom lookup field.</description>
    <fields>
        <fullName>Field__c</fullName>
        <description>The field insert or update that triggers the creation of this Relationship</description>
        <inlineHelpText>The field insert or update that triggers the creation of this Relationship</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>The object this Auto-Relationship is associated with</description>
        <inlineHelpText>The object this Auto-Relationship is associated with</inlineHelpText>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <description>The Relationship type to be created between the base object and the lookup object.  The lookup object will receive the reciprocal Relationship, if one is available.</description>
        <inlineHelpText>The Relationship type to be created between the base object and the lookup object.  The lookup object will receive the reciprocal Relationship, if one is available.</inlineHelpText>
        <label>Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Relationship Auto-Create</label>
</CustomObject>